--- a/translations/back_cover.tex/fr.po
+++ b/translations/back_cover.tex/fr.po
@@ -1,34 +1,41 @@
-# French translations for Homm package
-# Copyright (C) 2024 Free Software Foundation, Inc.
-# This file is distributed under the same license as the Homm package.
-# Automatically generated, 2024.
+# French translations for PACKAGE package
+# Copyright (C) 2025 Free Software Foundation, Inc.
+# This file is distributed under the same license as the PACKAGE package.
+# Automatically generated, 2025.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Homm 3BG-mission-book\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2025-03-26 09:51+0000\n"
-"PO-Revision-Date: 2025-05-15 08:02+0000\n"
-"Last-Translator: SkullsuiT <jfdswhaos@gmail.com>\n"
-"Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
-"mission-book/sections/back_cover/fr/>\n"
+"PO-Revision-Date: 2025-03-26 09:51+0000\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.12-dev\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #. type: Plain text
 #: sections/back_cover.tex:4
-#, fuzzy
 msgid "\\restoregeometry"
-msgstr "\\restoregeometry"
+msgstr ""
 
 #. type: Plain text
 #: sections/back_cover.tex:12
+#, fuzzy
+#| msgid ""
+#| "\\begin{center}\n"
+#| "  \\includegraphics[width=\\linewidth]{\\art/dimension_door.png}\n"
+#| "\\end{center}\n"
+#| "\n"
 msgid ""
 "\\iftoggle{noartbackground}{}{ \\begin{tikzpicture}[remember picture, "
 "overlay, inner sep=10pt] \\node(cover)[anchor=center] at (current page."
 "center) { \\includegraphics[height=\\paperheight, keepaspectratio]{\\layout/"
 "back.jpg} }; \\end{tikzpicture} }"
 msgstr ""
+"\\begin{center}\n"
+"  \\includegraphics[width=0.55\\linewidth]{\\art/dimension_door.png}\n"
+"\\end{center}\n"
+"\n"
