--- a/translations/notes.tex/fr.po
+++ b/translations/notes.tex/fr.po
@@ -1,37 +1,41 @@
-# French translations for Homm package
-# Copyright (C) 2024 Free Software Foundation, Inc.
-# This file is distributed under the same license as the Homm package.
-# Automatically generated, 2024.
+# French translations for PACKAGE package
+# Copyright (C) 2025 Free Software Foundation, Inc.
+# This file is distributed under the same license as the PACKAGE package.
+# Automatically generated, 2025.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: Homm 3BG-mission-book\n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2024-10-22 22:57+0200\n"
-"PO-Revision-Date: 2025-05-16 12:06+0000\n"
-"Last-Translator: Nohud <nohud@hotmail.fr>\n"
-"Language-Team: French <https://hosted.weblate.org/projects/homm3bg-fan-made-"
-"mission-book/sections/notes/fr/>\n"
+"PO-Revision-Date: 2024-10-22 22:57+0200\n"
+"Last-Translator: Automatically generated\n"
+"Language-Team: none\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Plural-Forms: nplurals=2; plural=n > 1;\n"
-"X-Generator: Weblate 5.12-dev\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #.  !TeX spellcheck = en_US
 #. type: Plain text
 #: sections/notes.tex:3
 msgid "\\addsection{Notes}{\\images/intelligence.png}"
-msgstr "\\addsection{Notes}{\\images/intelligence.png}"
+msgstr ""
 
 #. type: tikzpicture
 #: sections/notes.tex:7
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\begin{center}\n"
+#| "  \\includegraphics[width=\\linewidth]{\\art/dimension_door.png}\n"
+#| "\\end{center}\n"
+#| "\n"
 msgid ""
 "[remember picture, overlay, blend mode=multiply]\n"
 "  \\node[inner sep=0, opacity=0.44] at (current page.center)\n"
 "  {\\includegraphics[width=\\paperwidth, height=\\paperheight]{\\layout/citadel_background.jpg}};"
 msgstr ""
-"[remember picture, overlay, blend mode=multiply]\n"
-"  \\node[inner sep=0, opacity=0.44] at (current page.center)\n"
-"  {\\includegraphics[width=\\paperwidth, height=\\paperheight]{\\layout/citadel_background.jpg}};"
+"\\begin{center}\n"
+"  \\includegraphics[width=0.55\\linewidth]{\\art/dimension_door.png}\n"
+"\\end{center}\n"
+"\n"
